now starts with ball stuck to paddle, with space bar press to launch it. Fixed issue whereby the ball was carrying straight on if hitting 2 blocks at once.

--- a/style.css
+++ b/style.css
@@ -24,3 +24,7 @@
 .header-text {
     text-align: center;
 }
+
+.bootbox-body {
+    font-size: 18px;
+}
